@@ -530,7 +530,7 @@ public class MicrosoftStsOAuth2Strategy
             tokenErrorResponse.setResponseBody(response.getBody());
         } else {
             tokenResponse = ObjectMapper.deserializeJsonStringToObject(
-                    response.getBody(),
+                    getBodyFromSuccessfulResponse(response.getBody()),
                     MicrosoftStsTokenResponse.class
             );
         }
@@ -563,6 +563,10 @@ public class MicrosoftStsOAuth2Strategy
         }
 
         return result;
+    }
+
+    protected String getBodyFromSuccessfulResponse(@NonNull final String responseBody) throws ClientException {
+        return responseBody;
     }
 
     @Override
